--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -26,8 +26,8 @@ width:auto
     <form class='row' data-guest-target='form' data-action='change->guest#updateForm' name='guest_display'>
       <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='guest_selector' data-nxt-id data-destroy-target='destroy' data-update-target='update'></div>
 <!--       <div class='col-md-1'><span data-nxt-first_name></span> <span data-nxt-last_name></span></div> -->
-       <div class='col-md-1'><input id='guest-add-fn_1' class='form-control' type='text' name='first_name' data-nxt-first_name></p>
-      <input id='guest-add-ln_1' class='form-control' type='text' name='last_name' data-nxt-last_name></p></div>
+       <span class='col-md-1'><input id='guest-add-fn_1' class='form-control' type='text' name='first_name' data-nxt-first_name>
+      <input id='guest-add-ln_1' class='form-control' type='text' name='last_name' data-nxt-last_name></span>
       <div class='col-md-2'><input name="guest_email" type="text" data-nxt-email disabled></div>
       <div class='col-md-1'><input class='form-control' type='text' name='affiliation' data-nxt-affiliation></p></div>
       <div class='col-md-1'><input class='form-control' type='text' name='perks' data-nxt-perks></p></div>
