--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -35,6 +35,7 @@ width:auto
 <!--       <div class='col-md-1'><p data-nxt-added_by></p></div> -->
       <div class='col-md-1'><select class='form-select form-select-sm' name='seat_id' data-nxt-category data-guest-target='seat'></select></div>
       <div class='col-md-1'><input class='form-control' type='number' name='allotted' min=0 data-nxt-allotted disabled></div>
+      <div class='col-md-1'><p data-nxt-guestcommitted></p></div>
       <div class='col-md-1'>
         <i class='bi bi-calendar-event' data-nxt-invite_expiration data-guest-target='tooltip'></i>
         <i class='bi bi-envelope' data-nxt-emailed_at data-guest-target='tooltip'></i>
@@ -109,6 +110,7 @@ width:auto
           <div class='col-md text-center'>Allotted</div>
         </div>
       </div>
+      <div class='col-md-1'>Guest Committed</div>
       <div class='col-md-1'>Status</div>
       <div class='col-md-1'>Check-in</div>
       <div class='col-md-2'></div>
