--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -3,6 +3,10 @@
 border:transparent;
 width:auto
 }
+    
+#guest-disp{
+  display: none; 
+}
 </style>
 
 <div id='guests' data-controller='guest update destroy'
@@ -54,25 +58,22 @@ width:auto
           </ul>
         </div>
       </div>
-        <div class='col-md-1'><button  type='button' data-nxt-id data-action='guest#view_guest_seats'>View Seats</button></div>
+        <div ><button  class='btn btn-primary'   type='button' data-nxt-id data-action='guest#view_guest_seats' >View Seats </button></div>
     </form>
   </template>
 
-<div class="container mt-2" ><h5> Guest Level Seating Summary </h5> </div>
-  <div class="container mt-2" ><h6 id="guest-name"> </h6> </div>
-
-    <div class="container mt-2" >
-        <table class="table" >
+    <div class="cont-new" id = "guest-disp">
+     <div class="guest-disp" ><h6 id="guest-name"> </h6> </div>
+        <table  width = 300px>
           <thead>
             <tr>
               <%# <th>ID</th>
               <th>Guest ID</th> %>
               <th width=199.8> Seat Category</th>
-              <th width=199.8> Committed</th>
               <th width=199.8> Allotted</th>
             </tr>
           </thead>
-          <tbody id="data-check" type = "text" data-action='guest#view_guest_seats' data-guest-target='guest#extra'>
+          <tbody id="data-check" type = "text" data-action='guest#view_guest_seats' data-guest-target='guest'>
 
           </tbody>
         </table>
