--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -69,7 +69,7 @@ width:auto
             <tr>
               <%# <th>ID</th>
               <th>Guest ID</th> %>
-              <th width=199.8> Seat Category</th>
+              <th width=199.8> Seat dsaaa</th>
               <th width=199.8> Allotted</th>
             </tr>
           </thead>
