--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -58,7 +58,7 @@ width:auto
           </ul>
         </div>
       </div>
-        <div ><button  class='btn btn-primary'   type='button' data-nxt-id data-action='guest#view_guest_seats' >View Seats </button></div>
+        <div class = 'col-md-1'><button  class='btn btn-primary'   type='button' data-nxt-id data-action='guest#view_guest_seats' >View Seats </button></div>
     </form>
   </template>
 
