--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -126,7 +126,7 @@ width: 90px
       <div class='col-md-1'>Guest Committed</div>
       <div class='col-md-1'>Status</div>
       <div class='col-md-1'>Check-in</div>
-      <div class='col-md-1'></div>
+<!--       <div class='col-md-1'></div> -->
     </div>
   </div>
   <div class='container mt-2'>
