--- a/app/views/refers/show.html.erb
+++ b/app/views/refers/show.html.erb
@@ -8,7 +8,7 @@ data-action='update:created->refer#disableSubmit'>
 </template>
 <div class='mb-4' data-refer-target='dom'></div>
 <p>
-Please enter your friends email to which you want to send the purchase link to.
+Please enter your friends name and email address to which you want to send the purchase link to.
 </p>
 <form id='form-referral' data-action='update#sendFromForm'>
 <div class='input-group mb-4'>
