--- a/app/views/guest_mailer/referral_invitation_email.html
+++ b/app/views/guest_mailer/referral_invitation_email.html
@@ -52,13 +52,14 @@
                               color: black">
                       Hi,
                      <br>
-                      You have been referred to {{event.title}}</br>
+                      Please send your friends an invitation to FASHIONNXT event {{event.title}} by entering their email in the below referral link. You will be receivng rewards if any of your friends purchase tickets to the event.</br>
                     <br>
+                    <p>Following are the event details.</p>
                     </p>
                     <div class="ticket">
-                      <p><b><strong>Event date: </strong>{{event.datetime}}</b></p>
-                      <p><strong>About Event:</strong> {{event.description}}</p>
-                      <p><strong>{{event.address}}</p>
+                      <p style="color: black"><b><strong>Event date: </strong>{{event.datetime}}</b></p>
+                      <p style="color: black"><strong>About Event:</strong> {{event.description}}</p>
+                      <p style="color: black"><strong>{{event.address}}</p>
                   </div>  
                   <p>
                     <br>
@@ -68,7 +69,7 @@
                                 border: 2px solid #b94c4c; 
                                 padding: 10px 30px;
                                 font-weight: bold;"> 
-                         Accept Referral
+                         Referral Link
                     </a>
                   </p>
                 <p style="color: black; font-family: Comic Sans MS, Comic Sans, cursive; font-size: 15px;">
