--- a/app/views/guest_mailer/referral_invitation_email.text.erb
+++ b/app/views/guest_mailer/referral_invitation_email.text.erb
@@ -1,8 +1,8 @@
 Hi,
-You have been referred to <b><span data-nxt-title></span>
+Please send your friends an invitation to FASHIONNXT event <%= @event.title %> by entering their email in the below referral link. You will be receivng rewards if any of your friends purchase tickets to the event.
 <%= url_for(@event.image) %>
 Event date: <%= @event.datetime %>
 About Event: <%= @event.description %>
 <%= @event.address %>
-Please accept referral with this link: <%= link_to 'Referral', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
+Refer your friends with this link: <%= link_to 'Referral', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
 Looking forward to seeing you there!
