--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -387,6 +387,6 @@ var setExpiryModal = document.getElementById('invite-expiry')
 
     <br><%= button_to "Back to Dashboard", root_path, :class => "btn btn-success btn-rounded", :type => "button", :method => "get" %>
 
-</div>
+</div>-->
 
-<%= link_to "Back", '/events', class:"btn btn-primary" %><br><br> -->
+<%= link_to "Back", '/events',  style:"height:40px;width:80px", class:"btn btn-primary" %><br><br>
