--- a/app/views/events/_box_office_data.html.erb
+++ b/app/views/events/_box_office_data.html.erb
@@ -63,8 +63,7 @@
     <form class='row' data-boxoffice-target='form' data-action='change->boxoffice#boxoffice' name='boxoffice_display'>
       <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='boxoffice_selector' data-nxt-id data-update-target='update'></div>
       <div class='col-md-3'><span data-nxt-first_name></span> <span data-nxt-last_name></span></div>
-      #<div class='col-md-3'><span name="boxoffice_email" data-nxt-email disabled></div>
-      <div class='col-md-3'><input name="boxoffice_email" type="text" data-nxt-email disabled></div>
+      <div class='col-md-3'><span name="boxoffice_email" data-nxt-email disabled></div>
       <div class='col-md-1'><span name="seat_section" data-nxt-seat_section disabled></div>
       <div class='col-md-1'><span name="tickets" data-nxt-tickets disabled></div>
       <div class='col-md-2'>
