--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -118,12 +118,12 @@ width: 90px
 <!--       <div class='col-md-1'>Added By</div> -->
       <div class='col-md-3'>
         <div class='row'>
-          <div class='col-md text-center'>Seat Arrangement</div>
+          <div class='col-md text-center' style="background-color:#E8E8E8">Seat Arrangement</div>
         </div>
         <div class='row'>
-          <div class='col-md text-center'>Category</div>
-          <div class='col-md text-center'>Allotted</div>
-          <div class='col-md text-center'>Committed</div>
+          <div class='col-md text-center' style="background-color:#E8E8E8">Category</div>
+          <div class='col-md text-center' style="background-color:#E8E8E8">Allotted</div>
+          <div class='col-md text-center' style="background-color:#E8E8E8">Committed</div>
         </div>
       </div>
       <div class='col-md-1'>Guest Committed</div>
