--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@ h2
       <input type='hidden' name='accept' value=1><br>
 
       <b>No. of tickets:</b>&ensp;<input type='number' name='guestcommitted' min=0 data-nxt-guestcommitted>
-      <span>(maximum tickets: <span data-nxt-sum></span>)</span>
+      <span>(maximum tickets: <span data-nxt-sum></span>)</span><br><br></span><span id="error"></span>
 
     <br>
   </div> <br><br>     
